--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title: Dark Poole
+title: Likewise Learn
 url: https://r3sgame.github.io/likewise-learn-blog/
 paginate: 1
 baseurl: "/likewise-learn-blog"
