--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: Likewise Learn
-url: https://likewise-learn.web.app
+url: https://r3sgame.github.io/likewise-learn-blog/
 paginate: 1
 baseurl: "/likewise-learn-blog"
 permalink: pretty
